# llvm-pass-skeleton

./: CMakeLists.txt  a.c  a.ll  rtlib.c
skeleton/: Skeleton.cpp
